--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     </head>
     <body>
-        
+    <div>  
     <h1>hello world</h1>
     <h2>hello</h2>
     <p>
@@ -13,5 +13,6 @@
         paragraph
     </p>
     <p>siva</p>
+</div>  
     </body>
 </html>
